# Conquest-Frontier-Wars-Source

./: .gitignore  CMakeLists.txt  Conquest Source Readme.txt  README.md  cqmap_migrate.py  dacom_migrate.py  parse_dsp_sources.py  stage_from_dsp.py  vcxproj_to_cmake.py
Libs/: CMakeLists.txt  IRustFunnyComponent.h  main.cpp
Libs/Include/: 3dmath.h  BASECAM.H  BaseLight.h  CONT_LOD.H  ChannelEventTypes.h  DACOM.H  DAVariant.h  DataParser.h  Document.h  ENGINE.H  Engine2.h  EventSys.h  FDump.h  FVF.h  FileSys_Utility.h  Filesys.h  HKEvent.h  HeapObj.h  HkeyRec.h  IAnim.h  ICamera.h  IChannel2.h  IConnection.h  IDDBackDoor.h  IDocClient.h  IExtentContainer.h  IGammaControl.h  IHardPoint.h  IMaterial.h  IMaterialManager.h  IMesh.h  IProfileParser_Utility.h  IProperties.h  IRenderComponent.h  IRenderDebugger.h  IRigidBodyState.h  IStateMaterial.h  ITextureLibrary.h  IUTFWriter.h  IVertexBufferManager.h  (+49 more)
Libs/Include/RPUL/: Text.h
Libs/Include/bink/: radbase.h
Libs/rust-components/com-rom-rs/: Cargo.toml  build.rs  gen_header.py
Libs/src/Anim/: Anim.cpp  Anim.h  CMakeLists.txt  mlist.h  mstack.cpp  mstack.h
Libs/src/Channel/: CMakeLists.txt  channel.cpp
Libs/src/DACOM/: BaseHeap.h  CMakeLists.txt  DACOM.rc  Dacom.cpp  HeapInst.cpp  MSHeap.cpp  ProfileParser.cpp
Libs/src/DAHOTKEY/: CMakeLists.txt  HKEvent.cpp  HkeyRec.cpp  Hotkey.h  Hotkey.rc
Libs/src/DOSFile/: BaseUTF.h  CMakeLists.txt  DOSFile.rc  DOSFile.vcxproj  DosFileVer.h  IFF.cpp  MemFile.cpp  SearchPath.cpp  UTF.cpp  UTFDMan.cpp  UTFShare.cpp
Libs/src/Engine/: CMakeLists.txt  EngineInstanceJoint.h  JointState.h  LocalEngineInstance.h  engine.cpp  enginever.h  resource.h
Libs/src/Include/: BEZIER_CURVE.h  eulerangles.h  handlemap.h  trimeshlod.h
Libs/src/MaterialManager/: CMakeLists.txt  InternalMaterialManager.h  Material.h  MaterialWindow.cpp  Modifier.cpp  Modifier.h  ReadMe.txt  TextureList.cpp
Libs/src/MeshManager/: CMakeLists.txt  MeshArch.h  stdafx.cpp  stdafx.h
Libs/src/ParticleEffect/: CMakeLists.txt  PFAcceleration.h  PFAnimBillboardRender.h  PFCollision.h  PFDecalRender.h  PFDistanceDeltaHitter.h  PFEventEmmiter.h  PFFixedEmmiter.h  PFGrannyRender.h  PFInitialDirectedVelocity.h  PFInitialVelocity.h  PFLogicSwitch.h  PFMatModColor.h  PFMatModFloat.h  PFMeshCut.h  PFMeshInst.h  PFMeshSlice.h  PFMotionInterp.h  PFPointGravity.h  PFShutdownTimer.h  PFSpawn.h  PFSplitter.h  PFWind.h  ParticleEffect.cpp  ParticleParamFunctions.h  ParticleSystem.h  Particles.cpp  stdafx.cpp
Libs/src/RenderBatcher/: CMakeLists.txt
Libs/src/RenderPipeline/: CMakeLists.txt  RenderDebugger.cpp  StateInfo.h
Libs/src/StringTable/: CMakeLists.txt  StringTable.cpp
Libs/src/System/: CMakeLists.txt  SysContainer.cpp
Libs/src/TextureManager/: BmpRead.cpp  CMakeLists.txt  TextureManager.cpp  VFX_shapes.hpp  VfxRead.cpp  stdafx.cpp
Libs/src/VertexBufferManager/: CMakeLists.txt  CopyVertexBufferDesc.cpp  VertexBufferManager.cpp
Libs/src/VideoSystem/: CMakeLists.txt  VideoSystem.cpp
Libs/src/defcomp/: CMakeLists.txt  EulerAngles.h  StdAfx.cpp  def_patch.cpp  deform.cpp  deformIK.cpp  eng.h
Libs/src/x86Math/: CMakeLists.txt  fastdot.h  x86math.cpp
src/Anim/: Anim.h  AnimComponent.cpp  CMakeLists.txt  channel.cpp  channel.h  mnode.h
src/Conquest/: 00000409.016  00000409.256  Aegis.cpp  AirDefense.cpp  AnimObj.cpp  Animate.cpp  AnmBolt.cpp  AntiMatter.cpp  ArchHolder.h  AreaEffectBolt.cpp  ArtifactLauncher.cpp  ArtileryLauncher.cpp  AutoCannon.cpp  BBMesh.h  BMPoolJr.cpp  BMPoolJr.h  BRadix.h  Banker.cpp  BarrageLauncher.cpp  BaseHotRect.h  Blinkers.cpp  BlockadeRunner.cpp  BmpRead.cpp  BuffArtifact.cpp  BuffLauncher.cpp  BuildButton.cpp  BuildPlat.cpp  BuildScripts.bat  BuildShip.cpp  BuildSupPlat.cpp  BuildVersion.ini  Button2.cpp  CMakeLists.txt  CMenu_BuildInd.cpp  CMenu_Fabricator.cpp  CMenu_FindButtons.cpp  CMenu_Fleet.cpp  CMenu_GenPlat.cpp  CMenu_Ind.cpp  CMenu_MulMix.cpp  (+450 more)
src/Conquest/Globals/: CMakeLists.txt
src/Conquest/Include/: CQTrace.h  Globals.h  MGlobals.h  MGroupRef.h  MPartRef.h  MScript.h  MovieCameraFlags.h  VFX.H  da_memory  da_new  da_utility  da_vector  da_xmemory  da_xutility  pch.h
src/Conquest/Mission/: CMakeLists.txt
src/Conquest/Res/: Arrow_l.cur  Bleftscroll.cur  Brightscroll.cur  Btmscroll.cur  Harvest.cur  Leftscroll.cur  MiniRally.cur  Minidefault.cur  Miniharvest.cur  Minimove.cur  Move.cur  MoveAdmiral.cur  Rally.cur  Ram.cur  Repair.cur  Resupply.cur  Rightscroll.cur  Sell.cur  Tleftscroll.cur  Topscroll.cur  Trightscroll.cur  attack.cur  ban.cur  build.cur  capture.cur  cur00001.cur  cur00002.cur  cur00003.cur  cur00004.cur  cursor1.cur  cursor18.cur  cursor19.cur  cursor_a.cur  default.cur  default.fnt  escort.cur  intermediate.cur  jump.cur  mimic.cur  patrol.cur  (+1 more)
src/Conquest/Scripts/: Demo2.ilk  DemoScript.ilk  Scripts.dsw  Scripts.sln
src/Conquest/Trim/: CMakeLists.txt
src/Conquest/ZBatcher/: CMakeLists.txt
src/DOSFile/: BaseUTF.cpp  BaseUTF.h  CMakeLists.txt  DOSFile.aps  Dosfile.cpp  IFF.cpp  MemFile.cpp  SearchPath.cpp  UTF.cpp  UTFDMan.h  UTFShare.cpp  resource.h
src/EngComps/Collision/: CMakeLists.txt  DebugPrint.h  Gilbert.cpp  collision.cpp  dup.cpp  vbox.cpp  vclip.cpp  xprim.h
src/EngComps/EngineLights/: CMakeLists.txt  EngineLightArchetype.h  EngineLightInstance.h  EngineLights.cpp
src/MaterialManager/: CMakeLists.txt  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.rc  resource.h  stdafx.cpp
src/MeshManager/: CMakeLists.txt  IInternalMeshManager.h  MeshArch.cpp  MeshArch.h  MeshInstance.cpp  MeshInstance.h  MeshManager.cpp  MeshRender.cpp  MeshRender.h
src/RenderBatcher/: CMakeLists.txt  RenderBatcher.cpp
src/RenderPipeline/: CMakeLists.txt  RenderDebugger.h  StateCache.h
src/RenderPipeline/DirectDraw/: DirectDraw.cpp  DirectDrawTexture.h  (+2 more)
src/Streamer/: CMakeLists.txt  Streamer.cpp
src/TestProject/: CMakeLists.txt  main.cpp
src/defcomp/: CMakeLists.txt  StdAfx.h  defcomp.cpp  defcomp.h  defcomp.vcxproj  defdyn.cpp  defmesh.cpp  deform.h  eulerangles.cpp  ikinfo.h
src/x86Math/: CMakeLists.txt  x86math.cpp
(+930 files in other folders)
